--- a/src/pages/ProfileGit/styles.css
+++ b/src/pages/ProfileGit/styles.css
@@ -2,12 +2,16 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  padding: 20px;
+  padding: 0px 99px 0px 90px;
   margin-top: 54px;
+  margin-bottom: 126px;
 }
 
+
 .search-container h1 {
+  display: flex;
   font-weight: 500;
+  font-size: 38px;
   text-align: left;
   color: #262626;
   margin-bottom: 12px;
@@ -21,11 +25,46 @@
   padding: 30px 40px;
   background-color: #E6F7FF;
   border-radius: 16px;
+
 }
 
 .card-container {
-  padding: 30px 40px;
+  display: flex;
+  margin-top: 54px;
 }
+
+.card-content {
+  display: flex;
+  flex-direction: row;
+  padding: 43px 35px 44px 38px;
+  width: 100%;
+  background-color: #F5F5F5;
+  border-radius: 8px;
+  border: 0px white;
+}
+
+
+.card-profile {
+  display: flex;
+  background-color: #FFFFFF;
+  width: 902px;
+  height: 247px;
+  margin-left: 29px;
+  border-radius: 6px;
+  border: 1px solid #D9D9D9;
+
+}
+
+.card-profile h5 {
+  display: flex;
+  font-size: 20px;
+  font-weight: 500;
+  width: 534px;
+  padding: 8px 0px 0px 14px;
+  color: #1890FF;
+  margin-bottom: 19px;
+}
+
 
 .form-container {
   display: flex;
@@ -34,6 +73,7 @@
 }
 
 .search-input {
+  display: flex;
   background-color: #FFFFFF;
   border: 1px solid #D9D9D9;
   border-radius: 4px;
@@ -51,14 +91,9 @@
 .search-button {
   height: 40px;
   width: 101px;
-  margin-bottom: 54px;
+  margin-bottom: 27px;
   color: #ffffff;
   border-radius: 4px;
 }
 
 
-@media (min-width: 576px) {
-  .search-input {
-    width: 480px;
-  }
-}
