--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -3,23 +3,31 @@
 }
 
 .home-content h2 {
+    color: #000000;
     font-size: 48px;
     display: flex;
-    font-weight: bold;
+    align-items: center;
+    font-weight: 700;
     letter-spacing: 0.02em;
 }
 
 .home-content p {
+    display: flex;
     font-size: 24px;
-    font-weight: bold;
+    align-items: center;
     color: #7E7E7E;
-    font-weight: 700px;
+    font-weight: 700;
     letter-spacing: 0.02em;
     margin-bottom: 27px;
 }
+
 .start-button {
+    display: flex;
+    font-weight: 400;
     font-size: 16px;
+    width: 101px;
+    height: 40px;
+    padding: 5px 18px;
     color: #ffffff;
     border-radius: 4px;
-    background-color: #1890FF;
 }
