Github-desafio finalizado

--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -1,5 +1,9 @@
 .main-nav {
-  padding-left: 40px;
+  padding-left: 41px;
   min-height: 62px;
   background-color: #1890FF;
+}
+
+.main-nav h4 {
+  margin-top: 5px;
 }
