--- a/src/components/ProfileCard/styles.css
+++ b/src/components/ProfileCard/styles.css
@@ -1,35 +1,83 @@
 .profile-container {
-    background-color: #FFFFFF;
-    height: 40px;
-    padding: 5px 67px 8px 0px;
-    margin-left: 14px;
-    margin-right: 16px;
-    border-radius: 4px;
-    margin-bottom: 5px;
-    border: 1px solid #D9D9D9;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: #FFFFFF;
+  margin-left: 2px;
+  margin-right: 3px;
+  border-radius: 4px;
+  margin-bottom: 5px;
+  border: 1px solid #D9D9D9;
 }
 
 .profile-title {
-  display: inline;
+  margin-top: px;
+  margin-bottom: 1px;
   color: #737373;
-  font-size: 16px;
+  font-size: 0.8em;
   font-weight: 700;
-  padding: 10px;
-
 }
 
 .profile-description {
-  display:inline;
+  margin-bottom: 5px;
   color: #737373;
-  font-size: 16px;
+  font-size: 0.8em;
   font-style: normal;
 }
 
 .profile-descriptionUrl {
-  display:inline;
+  margin-bottom: 5px;
   color: #0029FF;
-  font-size: 16px;
-  font-style:normal;
+  font-size: 0.8em;
+  font-style: normal;
   font-weight: 500;
 }
 
+@media (min-width: 576px) {
+  .profile-container {
+    height: 40px;
+    flex-direction: row;
+    text-align: left;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
+
+  .profile-title {
+    margin-top: 10px;
+    margin-left: 10px;
+  }
+
+  .profile-description {
+    margin-top: 9px;
+    margin-left: 8px;
+  }
+
+  .profile-descriptionUrl {
+    margin-top: 9px;
+  }
+}
+
+@media (min-width: 992px) {
+  .profile-container {
+    height: 40px;
+    margin-left: 14px;
+    margin-right: 16px;
+    margin-bottom: 5px;
+  }
+
+  .profile-title {
+    margin-top: 8px;
+    font-size: 16px;
+  }
+
+  .profile-description {
+    margin-top: 6px;
+    font-size: 16px;
+  }
+
+  .profile-descriptionUrl {
+    margin-top: 6px;
+    font-size: 16px;
+  }
+}
